--- a/functions/package.json
+++ b/functions/package.json
@@ -23,8 +23,7 @@
     "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "formidable": "^3.5.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
     "openai": "^4.78.1",
     "zod": "^3.24.1"
   },
@@ -32,7 +31,6 @@
     "@types/busboy": "^1.5.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/formidable": "^3.4.5",
     "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
