--- a/functions/package.json
+++ b/functions/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "@google-cloud/documentai": "^8.12.0",
     "@types/dotenv": "^6.1.1",
+    "axios": "^1.7.9",
     "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.2.0",
+    "json-schema-traverse": "^1.0.0",
     "multer": "^1.4.4",
     "openai": "^4.78.1",
     "zod": "^3.24.1"
