ホスティングの設定

--- a/functions/package.json
+++ b/functions/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fabricator": "^0.5.2",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.2.0",
     "json-schema-traverse": "^1.0.0",
