ローカルではfunctions.configで本番では、envを使用。onRequest()に修正。不要コメント削除

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "invoice-ocr-app-668f6"
+    "default": "invoice-ocr-app-668f6",
+    "local": "invoice-ocr-app-668f6",
+    "dev": "invoice-ocr-app-668f6",
+    "prod": "invoice-ocr-app-668f6"
   }
 }
