本番でapiアクセス可能とする

--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,7 @@
   "functions": [
     {
       "source": "functions",
+      "runtime": "nodejs20",
       "codebase": "default",
       "ignore": [
         "node_modules",
