--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "^3.0.1"
   },
   "devDependencies": {
