--- a/functions/package.json
+++ b/functions/package.json
@@ -17,12 +17,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/documentai": "^8.12.0",
+    "@google-cloud/storage": "^7.15.0",
     "@types/dotenv": "^6.1.1",
     "axios": "^1.7.9",
     "busboy": "^1.6.0",
     "dotenv": "^16.4.7",
     "fabricator": "^0.5.2",
-    "firebase-admin": "^12.7.0",
+    "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "json-schema-traverse": "^1.0.0",
     "openai": "^4.78.1",
