--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -33,5 +34,8 @@
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
