--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "^5.0.1"
-
+    "react-scripts": "^5.0.1",
+    "sass": "^1.83.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
