--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "sass-embedded-darwin-arm64": "^1.83.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
