--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sass-embedded": "^1.83.1",
+    "sass-embedded-linux-x64": "^1.83.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -35,6 +37,7 @@
     "vite": "^6.0.5"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+    "@rollup/rollup-linux-x64-gnu": "4.6.1",
+     "sass-embedded-linux-x64": "^1.83.1"
   }
 }
