--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -16,3 +16,5 @@ src/secretKeys/.DS_Store
 src/secretKeys/invoice-ocr-app-668f6-firebase-adminsdk-8saw5-e731b401ea.json
 
 lib/**/secretKeys/
+
+/emulator-data
