--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
     "lint:fix": "eslint --ext .js,.ts . --fix",
     "build": "npx tsc",
     "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions,storage",
+    "serve": "npm run build && firebase emulators:start --only functions,firestore,storage --import=./emulator-data",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
