buildのenvファイルのcatを変更

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,8 +16,10 @@ jobs:
       - name: Create env file
         working-directory: ./frontend
         run: |
-          echo "VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}" > .env.production
-          echo "VITE_APP_API_URL=${{ secrets.VITE_APP_API_URL }}" >> .env.production
+          cat << EOF > .env
+          VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}
+          VITE_APP_API_URL=${{ secrets.VITE_APP_API_URL }}
+          EOF
 
       - name: Install dependencies and build
         working-directory: ./frontend
