--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
@@ -19,8 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
-    "sass-embedded": "^1.83.1",
-    "sass-embedded-linux-x64": "^1.83.1"
+    "sass-embedded": "^1.83.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -38,6 +40,6 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.6.1",
-     "sass-embedded-linux-x64": "^1.83.1"
+    "sass-embedded-linux-x64": "^1.83.1"
   }
 }
