--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@azure-rest/ai-document-intelligence": "^1.0.0-beta.3",
+    "@azure/ai-form-recognizer": "^5.0.0",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/identity": "^4.6.0",
     "@google-cloud/documentai": "^8.12.0",
     "@google-cloud/storage": "^7.15.0",
     "@types/dotenv": "^6.1.1",
