firabse.jsonの設定、console.logの削除

--- a/firebase.json
+++ b/firebase.json
@@ -22,6 +22,7 @@
       "source": "functions",
       "runtime": "nodejs20",
       "codebase": "default",
+      "region": "asia-northeast1",
       "ignore": [
         "node_modules",
         ".git",
@@ -32,12 +33,6 @@
       "predeploy": [
         "npm --prefix \"$RESOURCE_DIR\" run lint",
         "npm --prefix \"$RESOURCE_DIR\" run build"
-      ],
-      "secrets": [
-        "PROJECT_OCR_ID",
-        "LOCATION",
-        "PROCESSOR_OCR_ID",
-        "OPENAI_API_KEY"
       ]
     }
   ],
