ローカルで、doucmentIntelligenceと疎通の確認済み、プロンプトも一旦作成ずみ

--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "@azure/ai-form-recognizer": "^5.0.0",
     "@azure/core-auth": "^1.9.0",
     "@azure/identity": "^4.6.0",
+    "@firebase/storage": "^0.13.6",
     "@google-cloud/documentai": "^8.12.0",
     "@google-cloud/storage": "^7.15.0",
     "@types/dotenv": "^6.1.1",
@@ -27,6 +28,7 @@
     "busboy": "^1.6.0",
     "dotenv": "^16.4.7",
     "fabricator": "^0.5.2",
+    "firebase": "^11.3.1",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "json-schema-traverse": "^1.0.0",
