--- a/firebase.json
+++ b/firebase.json
@@ -19,21 +19,34 @@
   },
   "functions": [
     {
+      "timeoutSeconds": 600,
+      "memory": "4GiB",
       "source": "functions",
       "runtime": "nodejs20",
-      "codebase": "default",
       "region": "asia-northeast1",
+      "codebase": "default",
+      "docker": {
+        "registry": "asia-northeast1-docker.pkg.dev/invoice-ocr-app-668f6/gcf-artifacts"
+      },
       "ignore": [
         "node_modules",
         ".git",
         "firebase-debug.log",
         "firebase-debug.*.log",
-        "*.local"
+        "*.local",
+        "storage/**"
       ],
       "predeploy": [
         "npm --prefix \"$RESOURCE_DIR\" run lint",
         "npm --prefix \"$RESOURCE_DIR\" run build"
-      ]
+      ],
+      "egress": {
+        "allowed": [
+          "*.cognitiveservices.azure.com",
+          "*.api.cognitive.microsoft.com",
+          "private-ranges"
+        ]
+      }
     }
   ],
   "emulators": {
@@ -44,7 +57,7 @@
       "port": 9199
     },
     "firestore": {
-      "port": 8080
+      "port": 8081
     }
   },
   "storage": {
