--- a/functions/package.json
+++ b/functions/package.json
@@ -17,10 +17,11 @@
   "main": "lib/index.js",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
-    "@azure-rest/ai-document-intelligence": "^1.0.0-beta.3",
+    "@azure-rest/ai-document-intelligence": "^1.0.0",
     "@azure/ai-form-recognizer": "^5.0.0",
-    "@azure/core-auth": "^1.9.0",
-    "@azure/identity": "^4.6.0",
+    "@azure/identity": "^4.7.0",
+    "@eslint/config-array": "^0.19.2",
+    "@eslint/object-schema": "^2.1.6",
     "@firebase/storage": "^0.13.6",
     "@google-cloud/documentai": "^8.12.0",
     "@google-cloud/storage": "^7.15.0",
@@ -35,6 +36,7 @@
     "fs": "^0.0.1-security",
     "json-schema-traverse": "^1.0.0",
     "openai": "^4.78.1",
+    "rimraf": "^6.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
