--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,14 +13,19 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create env file
         working-directory: ./frontend
+        shell: bash
         run: |
-          echo "VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}" > .env.production
-          echo "VITE_APP_API_URL=${{ secrets.VITE_APP_API_URL }}" >> .env.production
+          echo "VITE_APP_API_KEY='${{ secrets.VITE_APP_API_KEY }}'" > .env
+          echo "VITE_APP_API_URL='${{ secrets.VITE_APP_API_URL }}'" >> .env
+
+          # .envファイルが作成されたか確認（機密情報は表示しない）
+          echo "Created .env file with following keys:"
+          cat .env | cut -d= -f1
 
       - name: Install dependencies and build
         working-directory: ./frontend
         run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: FirebaseExtended/action-hosting-dseploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_INVOICE_OCR_APP_668F6 }}
