fix: add X-API-KEY to production workflow

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,8 +15,8 @@ jobs:
         working-directory: ./frontend
         shell: bash
         run: |
-          echo "VITE_APP_API_KEY='${{ secrets.VITE_APP_API_KEY }}'" > .env
-          echo "VITE_APP_API_URL='${{ secrets.VITE_APP_API_URL }}'" >> .env
+          echo "VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}" > .env
+          echo "VITE_APP_API_URL=${{ secrets.VITE_APP_API_URL }}" >> .env
 
           # .envファイルが作成されたか確認（機密情報は表示しない）
           echo "Created .env file with following keys:"
