feat: 環境設定の更新とテストの追加 - `.gitignore` に新しいテスト結果とレポートのディレクトリを追加 - Firebaseのワークフローで環境変数 `VITE_ENABLE_DOCUMENT_INTELLIGENCE` と `VITE_ENABLE_PHI4` を追加 - Reactのインポートを統一し、`App.tsx` と `main.tsx` を修正 - CSVダウンロード機能のE2Eテストを新規作成し、正常系の動作を確認

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           echo "VITE_APP_API_KEY='${{ secrets.VITE_APP_API_KEY }}'" > .env
           echo "VITE_APP_API_URL='${{ secrets.VITE_APP_API_URL }}'" >> .env
+          echo "VITE_ENABLE_DOCUMENT_INTELLIGENCE=true" >> .env
+          echo "VITE_ENABLE_PHI4=true" >> .env
 
           # .envファイルが作成されたか確認（機密情報は表示しない）
           echo "Created .env file with following keys:"
